css/main.css
/* GENERAL STYLES */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: 'Montserrat', sans-serif;
}

body {
    display: flex;
    flex-direction: column;
    height: 100vh;
}

/* UTILITIES */
.posfixed {
    position: fixed;
}

.upgrade-btn {
    background-color: rgba(0, 0, 0, 0.89);
    border: 1px solid white;
    border-radius: 25px;
    color: white;
    padding: 10px 30px;
    cursor: pointer;

}

.flex {
    display: flex;
}

.column {
    flex-direction: column;
}

.flexgrow {
    flex-grow: 1;
}

.flexwrap {
    flex-wrap: wrap;
}

.paddingbottom-40px {
    padding-bottom: 40px;
}

.paddingbottom-20px {
    padding-bottom: 20px;
}

.paddingleft-25px {
    padding-left: 25px;
}

.opacity-05 {
    opacity: 0.5;
}

.round {
    border-radius: 50%;
}

/* HEADER */
.fixed-header {
    position: fixed;
    right: 0;
    text-align: right;
    width: calc(100% - 233px);
    background-color: rgba(0, 0, 0, 0.89);
    padding: 20px;
}

/* MAIN SECTION */
.main-section {
    display: flex;
    flex-grow: 1;
}

/* SIDEBAR SECTION */
.sidebar {
    background-color: black;
    color: white;
    width: 233px;
    padding: 10px 20px;
    display: flex;
    flex-direction: column;
    flex-shrink: 0;
    overflow: auto;
    max-height: calc(100vh - 90px);
}

.sidebar ul {
    list-style: none;
    padding-bottom: 30px;
    line-height: 40px;
    font-size: 13px;
    opacity: 0.5;
}

.sidebar .logo {
    width: 86%;
    padding-bottom: 20px;
}

.sidebar .sideicon {
    width: 16%;
    vertical-align: middle;
    margin-right: 8px;
}

.sidebar h4 {
    padding-bottom: 10px;
}

.sidebar .plusicon {
    font-size: 40px;
    padding-right: 10px;
}

.create-playlist {
    display: flex;
}

.sidebar .profileicon {
    width: 14%;
    background-color: grey;
    border-radius: 50%;
    padding: 0 2px;
    vertical-align: middle;
}

.sidebar .downloadicon {
    width: 10%;
    vertical-align: middle;
}

.profile hr {
    margin: 20px 0;
}


/* MAIN CONTENT */
main {
    width: 100%;
    background-color: #141922;
    color: white;
}

.main-content {
    padding-top: 100px;
    padding-left: 20px;
    padding-bottom: 100px;
    max-height: calc(100vh - 90px);
    overflow: auto;
}

.main-navigation {
    list-style: none;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.main-navigation li {
    padding: 0 20px;
}

.album-gallery {
    display: flex;
    flex-wrap: wrap;
    text-align: center;
}

.album-gallery h4 {
    padding: 15px 0;
}

.album-gallery .subtitle {
    color: #707070;
}

.album-card {
    width: calc(100% / 6);
}

.album-card img {
    width: 80%;
}




/* FOOTER SECTION */
footer {
    background-color: #282828;
    color: white;
    height: 90px;
    /* padding: 15px 20px; */
}

footer i {
    cursor: pointer;
}

.toolbar-section {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.left-toolbar {
    gap: 10px;
    align-items: center;
}

.left-toolbar,
.right-toolbar {
    width: 15%;
}

.right-toolbar {
    align-items: center;
}

.right-toolbar i {
    padding: 0 5px;
}

.volume-bar {
    width: 50%;
    height: 4px;
    background-color: grey;
    border-radius: 15px;
    margin: 0 15px;
}

.reproducing {
    width: 11%;
}

.player-container {
    width: 70%;
}

.player {
    align-items: center;
    justify-content: center;
}

.player-buttons {
    font-size: 23px;
}

.player-buttons i {
    padding: 0 15px;
}

.player-buttons .play-icon {
    font-size: 30px;
}

.progressbar {
    justify-content: center;
    align-items: center;
}

.time-bar {
    width: 27%;
    height: 4px;
    background-color: grey;
    border-radius: 15px;
    margin: 0 15px;
}

